transfer and style of music

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/utk-cs/2019fall_iron-man.git"
+    "url": "git+https://github.com/czheng4/Diary.git"
   },
   "author": "ChaoHui Zheng",
   "license": "ISC",
